<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.yubico</groupId>
    <artifactId>yubico-validation-client</artifactId>
    <version>3.0.5</version>
    <name>Yubico OTP validation client</name>
    <description>Client library written in Java for verifying Yubikey one-time passwords (OTPs).</description>
    <organization>
        <name>Yubico AB</name>
        <url>http://www.yubico.com/</url>
    </organization>
    <url>https://developers.yubico.com/yubico-java-client/</url>
    <packaging>pom</packaging>
    <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <developers>
      <developer>
        <id>klas</id>
        <name>Klas Lindfors</name>
        <email>klas@yubico.com</email>
      </developer>
      <developer>
        <id>henrik</id>
        <name>Henrik Stråth</name>
        <email>henrik@yubico.com</email>
      </developer>
    </developers>

    <licenses>
      <license>
        <name>BSD-license</name>
        <comments>Revised 2-clause BSD license</comments>
      </license>
    </licenses>

    <scm>
      <url>scm:git:git://github.com/Yubico/yubico-java-client.git</url>
      <connection>scm:git:git://github.com/Yubico/yubico-java-client.git</connection>
      <developerConnection>scm:git:ssh://git@github.com/Yubico/yubico-java-client.git</developerConnection>
    </scm>

    <modules>
      <module>v2client</module>
      <module>jaas</module>
      <module>demo-server</module>
    </modules>

    <distributionManagement>
      <repository>
        <id>sonatype-nexus-staging</id>
        <name>Nexus Staging Repo</name>
        <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
      </repository>
      <snapshotRepository>
        <id>sonatype-nexus-snapshots</id>
        <name>Nexus Snapshot Repo</name>
        <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
      </snapshotRepository>
    </distributionManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-release-plugin</artifactId>
              <version>2.5.3</version>
              <configuration>
                <localCheckout>true</localCheckout>
                <pushChanges>false</pushChanges>
              </configuration>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-source-plugin</artifactId>
              <version>3.2.1</version>
              <executions>
                <execution>
                  <id>attach-sources</id>
                  <phase>verify</phase>
                  <goals>
                    <goal>jar-no-fork</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
            <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>3.1.1</version>
              <configuration>
                <show>private</show>
                <nohelp>true</nohelp>
              </configuration>
              <executions>
                <execution>
                  <id>attach-javadoc</id>
                  <phase>verify</phase>
                  <goals>
                    <goal>jar</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
          </plugins>
        </build>
        <profiles>
          <profile>
            <id>release-sign-artifacts</id>
            <activation>
              <property>
                <name>performRelease</name>
                <value>true</value>
              </property>
            </activation>
            <build>
              <plugins>
                <plugin>
                  <groupId>org.apache.maven.plugins</groupId>
                  <artifactId>maven-gpg-plugin</artifactId>
                  <version>1.6</version>
                  <executions>
                    <execution>
                      <id>sign-artifacts</id>
                      <phase>verify</phase>
                      <goals>
                        <goal>sign</goal>
                      </goals>
                    </execution>
                  </executions>
                </plugin>
              </plugins>
            </build>
          </profile>
          <profile>
            <id>test-coveralls</id>
            <activation>
              <property>
                <name>env.COVERALLS</name>
                <value>true</value>
              </property>
            </activation>
            <build>
              <plugins>
                <plugin>
                  <groupId>org.jacoco</groupId>
                  <artifactId>jacoco-maven-plugin</artifactId>
                  <version>0.8.5</version>
                  <executions>
                    <execution>
                      <id>prepare-agent</id>
                      <goals>
                        <goal>prepare-agent</goal>
                      </goals>
                    </execution>
                  </executions>
                </plugin>
                <plugin>
                  <groupId>org.eluder.coveralls</groupId>
                  <artifactId>coveralls-maven-plugin</artifactId>
                  <version>4.3.0</version>
                </plugin>
              </plugins>
            </build>
          </profile>
        </profiles>
</project>
